# dit_learning_snaketemplate

./: README.md  pyproject.toml
notebooks/: DIT_programming_snakesontext.ipynb  README.md
src/snakesontext/: main.py
src/snakesontext/oop/: snake.py
src/snakesontext/pp/: snake.py
