[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dit_learning_snaketemplate"
version = "0.1"
dependencies = [  
  "keyboard>=0.13.5",
]
requires-python = ">=3.8"
authors = [
  {name = "Alberto Barron", email = "albarron@gmail.com"},
  {name = "Another person"},
  {email = "different.person@example.com"},
]
maintainers = [
  {name = "Some maintainer", email = "some@mail.com"}
]
description = "A project example that happens to run snake"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["snake", "template"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
spam-cli = "spam:main_cli"

[project.gui-scripts]
spam-gui = "spam:main_gui"

[project.entry-points."spam.magical"]
tomatoes = "spam:main_tomatoes"